Add Orca action approval contract
